@@ -1,3 +1,7 @@
+Sun Jun  1 12:48:45 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
 Sun Jun  1 12:47:37 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* upstream-trunk: Sync'd with
